# environment-setup

./: CMakeLists.txt  MacOS.md  README.md  Windows.md  install_IBus_pinyin.md  install_ibus.sh  linux opencv cuda.md  linux opencv cuda.sh  main.cpp
test/: CMakeLists.txt
